update open hours

--- a/social/index.html
+++ b/social/index.html
@@ -370,10 +370,10 @@
             </div>
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
-                 <meta itemprop="openingHours" content="We,Th,Fr,Sa,Su 19:00-23:00">
+                 <meta itemprop="openingHours" content="Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <p>Mer&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
+                        <p>Gio&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
 
                     </div>
                 </div>
