--- a/asporto/index.html
+++ b/asporto/index.html
@@ -128,10 +128,6 @@
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Nachos Supreme &emsp; 5,5</h3>    
-                            <p>tortillas con cheddar, peperoncino fresco, guacamole</p>
-                        </li>
-                        <li>
                             <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
                             <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                         </li>
@@ -140,24 +136,28 @@
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
+                            <h3>Dadolata &emsp; 4,5</h3>    
+                            <p>cubetti di zucca e ceci con spezie</p>
+                        </li>
+                        <li>
                             <h3>Anelli di Cipolla &emsp; 4,5</h3>
                             <p>cipolla gialla impanata e fritta</p>
                         </li>
                         <li>
-                            <h3>Insalata Mista &emsp; 4</h3>    
-                            <p>con verdure di stagione</p>
+                            <h3>Nachos Supreme &emsp; 5,5</h3>    
+                            <p>tortillas con cheddar, peperoncino fresco, guacamole</p>
+                        </li>
+                        <li>
+                            <h3>Hummus &emsp; 5</h3>    
+                            <p>servito con tortillas</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>    
                             <p>patate fritte con buccia</p>
                         </li>
                         <li>
-                            <h3>Ratatouille &emsp; 4,5</h3>
-                            <p>verdura tagliata a dadi cotta al forno</p>
-                        </li>
-                        <li>
-                            <h3>Gazpacho di Avocado &emsp; 5</h3>    
-                            <p>avocado, cetrioli, cipolla, pomodorini, bacon</p>
+                            <h3>Zuppa di Stagione &emsp; 3,5</h3>
+                            <p>chiedi al personale</p>
                         </li>
                     </ul>
                 </div>
@@ -183,16 +183,16 @@
                             <p>180 grammi di manzo, parmigiano 36 mesi, rucola, aceto balsamico tradizionale di modena</p>
                         </li>
                         <li>
-                            <h3>Estivo &emsp; 8,9 / doppio 14,9</h3> 
-                            <p>180 grammi di manzo, composta di feta e pomodori, melanzana grigliata, rucola</p>
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, montasio DOP, crema di porcini, speck croccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>California &emsp; 10,5 / doppio 14,9</h3>    
-                            <p>180 grammi di manzo, cheddar, pancetta, tropea, pomodoro fresco, guacamole</p>
+                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>    
+                            <p>180 grammi di manzo, gorgonzola, crema di zucca, speck croccante</p>
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>    
@@ -203,29 +203,54 @@
                             <p>100 grammi di manzo, cheddar</p>
                         </li>
                     </ul>                      
-                </div>
+                </div>   
             </div>
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Carni<br></h2>
+                    <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Costine &emsp; 11,5</h3>    
                             <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                         </li>
                         <li>
+                            <h3>Gulasch &emsp; 10,5</h3>    
+                            <p>spezzatino di maiale e patate <br>servito in pagnotta</p>
+                        </li>
+                        <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>    
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Roastbeef Inglese&emsp; 8,9</h3>    
-                            <p>girello di manzo<br>servito con salsa ai capperi</p>
+                            <h3>Cotoletta alla Milanese &emsp; 20</h3>    
+                            <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>    
-                            <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
+                            <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
                         </li>
                     </ul>                      
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
+                    <div class="title-divider">
+                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Blondie &emsp; 5</h3>
+                                <p>brownie di cioccolato e nocciole <br>servito con crema di mascarpone</p>
+                            </li>
+                            <li>
+                                <h3>Cheesecake &emsp; 5</h3>
+                                <p>cheesecake stile new york</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="title-divider">
+                        <h4 class="subheader text-center"><small>I nostri prodotti contengono allergeni: richiedi  la lista al personale</small></h4>
+                        <br>
+                    </div>
                 </div>
             </div>
         </section> 
