--- a/menu/index.html
+++ b/menu/index.html
@@ -115,10 +115,6 @@
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Nachos Supreme &emsp; 5,5</h3>    
-                            <p>tortillas con cheddar, peperoncino fresco, guacamole</p>
-                        </li>
-                        <li>
                             <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
                             <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                         </li>
@@ -127,24 +123,28 @@
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
+                            <h3>Dadolata &emsp; 4,5</h3>    
+                            <p>cubetti di zucca e ceci con spezie</p>
+                        </li>
+                        <li>
                             <h3>Anelli di Cipolla &emsp; 4,5</h3>
                             <p>cipolla gialla impanata e fritta</p>
                         </li>
                         <li>
-                            <h3>Insalata Mista &emsp; 4</h3>    
-                            <p>con verdure di stagione</p>
+                            <h3>Nachos Supreme &emsp; 5,5</h3>    
+                            <p>tortillas con cheddar, peperoncino fresco, guacamole</p>
+                        </li>
+                        <li>
+                            <h3>Hummus &emsp; 5</h3>    
+                            <p>servito con tortillas</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>    
                             <p>patate fritte con buccia</p>
                         </li>
                         <li>
-                            <h3>Ratatouille &emsp; 4,5</h3>
-                            <p>verdura tagliata a dadi cotta al forno</p>
-                        </li>
-                        <li>
-                            <h3>Gazpacho di Avocado &emsp; 5</h3>    
-                            <p>avocado, cetrioli, cipolla, pomodorini, bacon</p>
+                            <h3>Zuppa di Stagione &emsp; 3,5</h3>
+                            <p>chiedi al personale</p>
                         </li>
                     </ul>
                 </div>
@@ -170,16 +170,16 @@
                             <p>180 grammi di manzo, parmigiano 36 mesi, rucola, aceto balsamico tradizionale di modena</p>
                         </li>
                         <li>
-                            <h3>Estivo &emsp; 8,9 / doppio 14,9</h3> 
-                            <p>180 grammi di manzo, composta di feta e pomodori, melanzana grigliata, rucola</p>
+                            <h3>Autunno &emsp; 10,5 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, montasio DOP, crema di porcini, speck croccante</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>California &emsp; 10,5 / doppio 14,9</h3>    
-                            <p>180 grammi di manzo, cheddar, pancetta, tropea, pomodoro fresco, guacamole</p>
+                            <h3>Mantovano &emsp; 8,9 / doppio 14,9</h3>    
+                            <p>180 grammi di manzo, gorgonzola, crema di zucca, speck croccante</p>
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>    
@@ -201,16 +201,20 @@
                             <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                         </li>
                         <li>
+                            <h3>Gulasch &emsp; 10,5</h3>    
+                            <p>spezzatino di maiale e patate <br>servito in pagnotta</p>
+                        </li>
+                        <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>    
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Roastbeef Inglese&emsp; 8,9</h3>    
-                            <p>girello di manzo<br>servito con salsa ai capperi</p>
+                            <h3>Cotoletta alla Milanese &emsp; 20</h3>    
+                            <p>fiorentina di vitello impanata <br>servita con insalata e patatine</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>    
-                            <p>fiorentina di manzo da 8 a 14 etti.<br>cottura: molto al sangue o al sangue</p>
+                            <p>fiorentina di manzo <br>cottura: molto al sangue o al sangue</p>
                         </li>
                     </ul>                      
                 </div>
@@ -233,8 +237,8 @@
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
-                                <h3>Panna Cotta &emsp; 5</h3>
-                                <p>servita con sciroppo d'acero</p>
+                                <h3>Crumble &emsp; 5</h3>
+                                <p>crumble con crema pasticcera e scaglie di cioccolato</p>
                             </li>
                             <li>
                                 <h3>Vino di Visciola e Biscotti &emsp; 5</h3>
@@ -244,6 +248,10 @@
                         <blockquote>
                             <p>Compleanni e ricorrenze: forniamo dolci e torte, se portate le vostre il servizio è di 2 € a persona. <br>Accettiamo solo prodotti di pasticceria.</p>
                         </blockquote>
+                        <br>
+                    </div>
+                    <div class="title-divider">
+                        <h4 class="subheader text-center"><small>I nostri prodotti contengono allergeni: richiedi  la lista al personale</small></h4>
                         <br>
                     </div>
                 </div>
