--- a/asporto/index.html
+++ b/asporto/index.html
@@ -149,7 +149,7 @@
                         </li>
                         <li>
                             <h3>Hummus &emsp; 5</h3>    
-                            <p>servito con tortillas</p>
+                            <p>hummus di ceci e zucca, servito con tortillas</p>
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>    
