--- a/asporto/index.html
+++ b/asporto/index.html
@@ -248,7 +248,7 @@
                         </ul>
                     </div>
                     <div class="title-divider">
-                        <h4 class="subheader text-center"><small>I nostri prodotti contengono allergeni: chiedi informazioni al telefono</small></h4>
+                        <p class="text-center">I nostri prodotti contengono allergeni</p>
                         <br>
                     </div>
                 </div>
