--- a/menu/index.html
+++ b/menu/index.html
@@ -251,7 +251,7 @@
                         <br>
                     </div>
                     <div class="title-divider">
-                        <h4 class="subheader text-center"><small>I nostri prodotti contengono allergeni: richiedi  la lista al personale</small></h4>
+                        <p class="text-center">I nostri prodotti contengono allergeni: richiedi  la lista al personale</p>
                         <br>
                     </div>
                 </div>
