--- a/asporto/index.html
+++ b/asporto/index.html
@@ -145,7 +145,7 @@
                         </li>
                         <li>
                             <h3>Nachos Supreme &emsp; 5,5</h3>    
-                            <p>tortillas con cheddar, peperoncino fresco, guacamole</p>
+                            <p>tortillas, cheddar, peperoncino fresco</p>
                         </li>
                         <li>
                             <h3>Hummus &emsp; 5</h3>    
@@ -157,7 +157,6 @@
                         </li>
                         <li>
                             <h3>Zuppa di Stagione &emsp; 3,5</h3>
-                            <p>chiedi al personale</p>
                         </li>
                     </ul>
                 </div>
