--- a/asporto/index.html
+++ b/asporto/index.html
@@ -214,7 +214,7 @@
                         </li>
                         <li>
                             <h3>Gulasch &emsp; 10,5</h3>    
-                            <p>spezzatino di maiale e patate <br>servito in pagnotta</p>
+                            <p>spezzatino di manzo e patate <br>servito in pagnotta</p>
                         </li>
                         <li>
                             <h3>Tagliata di Picanha &emsp; 19</h3>    
