--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -82,7 +82,7 @@
                         <div class="medium-12 large-12 columns">
                             <div class="share-block">
                                 <h5 class="date" style="margin-top: 0.5em;">18 Novembre 2017</h5>
-                                <h5>Dalle 20:00 alle 1:00</h5>
+                                <h5>Dalle 20:00 all'1:00</h5>
                                 <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
                             </div>
                         </div>
