--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -104,7 +104,7 @@
                     <li>Non prendiamo prenotazioni</li>
                     <li>Non facciamo servizio al tavolo</li>
                     <li>Si ordina al bancone</li>
-                    <li>Non forniamo coperto e posate... il tavagliolo si però!</li>
+                    <li>Non forniamo coperto e posate. il tavagliolo, quello si!</li>
                 </ul>
                 <hr>
             </div>
