--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | CApre il Beerstrot Birreria</title>
+    <title>Beerstrot | Apre il Beerstrot Birreria</title>
     <meta name="description" content="18 Novembre 2017 alle ore 20:00. Apre il Beerstrot Birreria"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
@@ -90,9 +90,10 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Tutti i Venerdì e i Sabati</h2>
-                <p>Un'ampia selezione di birre artigianali: alla spina e in bottiglia; un po' di vino. Se gradite stuzzicare o mangiare qualcosa, ve lo serviamo nelle confezioni da asporto.</p>
-                <p>Un posto incantevole dove condividere una birra.</p>
+                <h2>Un posto incantevole dove condividere una birra</h2>
+                <p>Tutti i Venerdì e i Sabati, dalle 20:00 all'1:00, nella casetta adiacente all'aia.</p>
+                <p>Un'ampia selezione di birre artigianali: alla spina e in bottiglia; un po' di vino.</p>
+                    <p>Se gradite potete stuzzicare o mangiare qualcosa, ma lo serviamo nelle confezioni da asporto.</p>
                 <hr>
                 <h2>Come Funziona</h2>
                 <ul>
@@ -107,6 +108,29 @@
                     <li>Non forniamo coperto e posate. il tavagliolo, quello si!</li>
                 </ul>
                 <hr>
+                <h2>Il Locale</h2>
+                <ul class="small-block-grid-1">
+                    <li><img src="http://www.beerstrot.it/asset/img/large/casetta.interno.jpg" alt="Casetta: interno">
+                    </li>
+                </ul>
+                <ul class="small-block-grid-1">
+                    <li><img src="http://www.beerstrot.it/asset/img/large/casetta-bancone.jpg" alt="Casetta: il bancone birre">
+                    </li>
+                </ul>
+                <ul class="small-block-grid-1">
+                    <li><img src="http://www.beerstrot.it/asset/img/large/casetta-lampadari.jpg" alt="Casetta: le luci">
+                    </li>
+                </ul>
+                <ul class="small-block-grid-1">
+                    <li><img src="http://www.beerstrot.it/asset/img/large/luci.jpg" alt="Casetta: le luci">
+                    </li>
+                </ul>
+                <ul class="small-block-grid-1">
+                    <li><img src="http://www.beerstrot.it/asset/img/large/rosmarino.jpg" alt="Casetta: vista esterna">
+                    </li>
+                </ul>
+                <hr>
+
             </div>
         </article>
     </div>
@@ -121,13 +145,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/eventi/cena-san-martino.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.beerstrot.it/eventi/beerstrot-birreria.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/eventi/cena-san-martino.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://www.beerstrot.it/eventi/beerstrot-birreria.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/eventi/cena-san-martino.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://www.beerstrot.it/eventi/beerstrot-birreria.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
