--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -90,7 +90,7 @@
                 </header>
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
-                <h2>Un posto incantevole dove condividere una birra</h2>
+                <h2>Beerstrot Birreria</h2>
                 <p>Tutti i Venerdì e i Sabati, dalle 20:00 all'1:00, nella casetta adiacente all'aia.</p>
                 <p>Un'ampia selezione di birre artigianali: alla spina e in bottiglia; un po' di vino.</p>
                     <p>Se gradite potete stuzzicare o mangiare qualcosa, ma lo serviamo nelle confezioni da asporto.</p>
@@ -108,7 +108,7 @@
                     <li>Non forniamo coperto e posate. il tavagliolo, quello si!</li>
                 </ul>
                 <hr>
-                <h2>Il Locale</h2>
+                <h2>Un posto incantevole dove condividere una birra</h2>
                 <ul class="small-block-grid-1">
                     <li><img src="http://www.beerstrot.it/asset/img/large/casetta.interno.jpg" alt="Casetta: interno">
                     </li>
