--- a/eventi/beerstrot-birreria.html
+++ b/eventi/beerstrot-birreria.html
@@ -108,7 +108,7 @@
                     <li>Non forniamo coperto e posate. il tavagliolo, quello si!</li>
                 </ul>
                 <hr>
-                <h2>Un posto incantevole dove condividere una birra</h2>
+                <h2>Un Posto Incantevole</h2>
                 <ul class="small-block-grid-1">
                     <li><img src="http://www.beerstrot.it/asset/img/large/casetta.interno.jpg" alt="Casetta: interno">
                     </li>
